Add grid layout to sidebar

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <title>Admin Dashboard</title>
   </head>
   <body>
-    <h1>Admin Dashboard</h1>
     <div class="sidebar-container">
       <div class="branding">
         <svg
           id="dash-icon"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
-          style="width: 24px; height: 24px"
+          style="width: 50px; height: 50px"
         >
           <path
             d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z"
@@ -107,8 +106,9 @@
                 fill="white"
               />
             </svg>
-            <div class="nav-item-link">Communities</div>
+            <div class="nav-link">Communities</div>
           </li>
+          <li class="nav-item dummy-nav-item"></li>
           <li class="nav-item">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -121,7 +121,7 @@
                 fill="white"
               />
             </svg>
-            <div class="nav-items-link">Settings</div>
+            <div class="nav-link">Settings</div>
           </li>
           <li class="nav-item">
             <svg
@@ -135,7 +135,7 @@
                 fill="white"
               />
             </svg>
-            <div class="nav-item-link">Support</div>
+            <div class="nav-link">Support</div>
           </li>
           <li class="nav-item">
             <svg
@@ -149,6 +149,7 @@
                 fill="white"
               />
             </svg>
+            <div class="nav-link">Privacy</div>
           </li>
         </ul>
       </div>
