Add basic layout for project section

--- a/index.html
+++ b/index.html
@@ -209,10 +209,12 @@
         <h3>Your Projects</h3>
         <div class="project-cards">
           <div class="project-card">
-            <h4 class="project-card-name">Super Cool Project</h4>
-            <p class="project-descript">
-              Some text goes here. a whole paragraph
-            </p>
+            <div class="project-top">
+              <h4 class="project-card-name">Super Cool Project</h4>
+              <p class="project-descript">
+                Some text goes here. a whole paragraph
+              </p>
+            </div>
             <div class="project-icons-container">
               <ul class="project-icons-list">
                 <li class="project-icon-item">
@@ -240,11 +242,51 @@
             </div>
           </div>
           <div class="project-card">
-            <h4 class="project-card-name">Less Cool Project</h4>
-            <p class="project-descript">
-              Some text goes here. a whole paragraph. Even more text inside this
-              one because i am not creative.
-            </p>
+            <div class="project-top">
+              <h4 class="project-card-name">Less Cool Project</h4>
+              <p class="project-descript">
+                Some text goes here. a whole paragraph. Even more text inside
+                this one because i am not creative.
+              </p>
+            </div>
+
+            <div class="project-icons-container">
+              <ul class="project-icons-list">
+                <li class="project-icon-item">
+                  <img
+                    class="project-icon"
+                    src="./assets/fave.svg"
+                    alt="fave"
+                  />
+                </li>
+                <li class="project-icon-item">
+                  <img
+                    class="project-icon"
+                    src="./assets/watch.svg"
+                    alt="eye with a plus icon"
+                  />
+                </li>
+                <li class="project-icon-item">
+                  <img
+                    class="project-icon"
+                    src="./assets/share.svg"
+                    alt="share icon"
+                  />
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="project-card">
+            <div class="project-top">
+              <h4 class="project-card-name">Silly Project</h4>
+              <p class="project-descript">
+                Some text goes here. a whole paragraph. Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Reprehenderit aliquam nihil
+                ipsam? Deserunt aliquid ipsa, amet nobis unde, et asperiores ab
+                ex quo provident autem repudiandae eveniet, alias sint
+                temporibus!
+              </p>
+            </div>
             <div class="project-icons-container">
               <ul class="project-icons-list">
                 <li class="project-icon-item">
