Add basic layout for Announcements

--- a/index.html
+++ b/index.html
@@ -317,21 +317,29 @@
       </div>
       <div class="main-sidebar">
         <div class="announce-container">
-          <h2>Announcements</h2>
+          <h3>Announcements</h2>
           <ul class="announcements-list">
             <li class="announcement">
-              <h3 class="announce-title">Site Maintain</h3>
+              <h4 class="announce-title">Site Maintain</h4>
               <p class="announce-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
-                libero quis cum molestiae...
+                libero quis cum molestiae Adipisci repellendus impedit quod, veniam, sequi...
               </p>
             </li>
             <li class="announcement">
-              <h3 class="announce-title">Community Share Day</h3>
+              <h4 class="announce-title">Community Share Day</h4>
               <p class="announce-text">
                 Adipisci repellendus impedit quod, veniam, sequi nostrum
                 consequatur tenetur est, facere velit asperiores distinctio
                 commodi rem blanditiis natus magnam maxime fugiat nobis...
+              </p>
+            </li>
+            <li class="announcement">
+              <h4 class="announce-title">Updated Privacy Policy</h4>
+              <p class="announce-text">
+                Adipisci repellendus impedit quod, veniam, sequi nostrum
+                consequatur tenetur est, facere commodi rem blanditiis natus
+                magnam maxime fugiat nobis...
               </p>
             </li>
           </ul>
