Add styling to projects section

--- a/index.html
+++ b/index.html
@@ -285,11 +285,114 @@
               <p class="project-descript">
                 Some text goes here. a whole paragraph. Lorem ipsum dolor sit
                 amet consectetur adipisicing elit. Reprehenderit aliquam nihil
-                ipsam? Deserunt aliquid ipsa, amet nobis unde, et asperiores ab
-                ex quo provident autem repudiandae eveniet, alias sint
-                temporibus!
+                ipsam? 
               </p>
             </div>
+            <div class="project-icons-container">
+              <ul class="project-icons-list">
+                <li class="project-icon-item">
+                  <img
+                    class="project-icon"
+                    src="./assets/fave.svg"
+                    alt="fave"
+                  />
+                </li>
+                <li class="project-icon-item">
+                  <img
+                    class="project-icon"
+                    src="./assets/watch.svg"
+                    alt="eye with a plus icon"
+                  />
+                </li>
+                <li class="project-icon-item">
+                  <img
+                    class="project-icon"
+                    src="./assets/share.svg"
+                    alt="share icon"
+                  />
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="project-card">
+            <div class="project-top">
+              <h4 class="project-card-name">Easy Peasy App</h4>
+              <p class="project-descript">
+                Some text goes here. a whole paragraph. Even more text inside
+                this one because i am not creative. More test text goes here to make this a little longer hopefully.
+              </p>
+            </div>
+
+            <div class="project-icons-container">
+              <ul class="project-icons-list">
+                <li class="project-icon-item">
+                  <img
+                    class="project-icon"
+                    src="./assets/fave.svg"
+                    alt="fave"
+                  />
+                </li>
+                <li class="project-icon-item">
+                  <img
+                    class="project-icon"
+                    src="./assets/watch.svg"
+                    alt="eye with a plus icon"
+                  />
+                </li>
+                <li class="project-icon-item">
+                  <img
+                    class="project-icon"
+                    src="./assets/share.svg"
+                    alt="share icon"
+                  />
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="project-card">
+            <div class="project-top">
+              <h4 class="project-card-name">Ad Blocker</h4>
+              <p class="project-descript">
+                Some text goes here. a whole paragraph. Even more text inside
+                this one because i am not creative. Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+              </p>
+            </div>
+
+            <div class="project-icons-container">
+              <ul class="project-icons-list">
+                <li class="project-icon-item">
+                  <img
+                    class="project-icon"
+                    src="./assets/fave.svg"
+                    alt="fave"
+                  />
+                </li>
+                <li class="project-icon-item">
+                  <img
+                    class="project-icon"
+                    src="./assets/watch.svg"
+                    alt="eye with a plus icon"
+                  />
+                </li>
+                <li class="project-icon-item">
+                  <img
+                    class="project-icon"
+                    src="./assets/share.svg"
+                    alt="share icon"
+                  />
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="project-card">
+            <div class="project-top">
+              <h4 class="project-card-name">Money Maker</h4>
+              <p class="project-descript">
+                Some text goes here. a whole paragraph. Even more text inside
+                this one because i am not creative. Blah blah blah.
+              </p>
+            </div>
+
             <div class="project-icons-container">
               <ul class="project-icons-list">
                 <li class="project-icon-item">
