Add styling to announcements

--- a/index.html
+++ b/index.html
@@ -429,14 +429,14 @@
               <h4 class="announce-title">Site Maintain</h4>
               <p class="announce-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
-                libero quis cum molestiae Adipisci repellendus impedit quod, veniam, sequi...
+                libero quis sequi...
               </p>
             </li>
             <li class="announcement">
               <h4 class="announce-title">Community Share Day</h4>
               <p class="announce-text">
                 Adipisci repellendus impedit quod, veniam, sequi nostrum
-                consequatur tenetur est, facere velit asperiores distinctio
+                consequatur 
                 commodi rem blanditiis natus magnam maxime fugiat nobis...
               </p>
             </li>
@@ -444,7 +444,7 @@
               <h4 class="announce-title">Updated Privacy Policy</h4>
               <p class="announce-text">
                 Adipisci repellendus impedit quod, veniam, sequi nostrum
-                consequatur tenetur est, facere commodi rem blanditiis natus
+                 rem blanditiis natus
                 magnam maxime fugiat nobis...
               </p>
             </li>
